# attendance-backend

./: .gitignore  README.md  app.py  database.py  pyproject.toml
app/: __init__.py  app.py  database.py
app/controllers/: __init__.py  app_config_controller.py  auth_controller.py  base_controller.py  user_controller.py
app/migrations/: 1746173588_user_tenseal_context.py  1746692750_create_database_for_saving_user_.py  1747800216_create_user_attendance_and_app_configs.py  1747905537_add_role_id_to_user_model.py  1748251410_change_user_attendance_model_late_in_.py
app/models/: __init__.py  app_config_model.py  user_attendance_model.py  user_encrypted_face_embeddings_model.py  user_model.py  user_profile_model.py  user_registered_faces_model.py  user_role_model.py  user_tenseal_context_model.py
app/schemas/: app_config_schema.py  user_attendance_schema.py
app/schemas/user/: __init__.py  register_schema.py  user_profile_schema.py  user_role_schema.py  user_schema.py
app/seeds/: __init__.py  app_config_seeder.py  user_role_seeder.py  user_seeder.py
controllers/: __init__.py  auth_controller.py  user_controller.py
migrations/: 1745984575_init.py
models/: __init__.py  user_encrypted_face_embeddings_model.py  user_model.py  user_profile_model.py  user_registered_faces_model.py  user_tenseal_context.py
schemas/user/: __init__.py  base_schema.py  user_profile_schema.py  user_schema.py
